/*
 * $Id: ChangeLog,v 1.581 2003/01/04 04:33:09 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-01-04 09:54 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>

  Modified SiteSrv example to build dbf on fly to avoid unix/windows conversion
  removed site.dbf, dbt and indexes.

    + samples/sitesrv/blddbf.prg
       + create site.dbf, indexes and add default data
    * samples/sitesrv/sitesrv.prg
       * to call blddbf

2003-01-04 05:28 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  + doc/inet.txt
    + Added basic documentation for Inet api

  + samples/sitesvr
  + samples/sitesvr/Makefile
  + samples/sitesvr/SITE.DBF
  + samples/sitesvr/SITE.VEW
  + samples/sitesvr/SITE.dbt
  + samples/sitesvr/SITE01.NTX
  + samples/sitesvr/SITE02.NTX
  + samples/sitesvr/readme.txt
  + samples/sitesvr/sitesrv.prg
    + Added the site server to the sample directory

  * samples/Makefile
    + Added site server to the samples compilation

2003-01-03 21:07 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/achoice.prg
    ! Achoiche did not unselect the current item when aborting.
      Fixed

2003-01-02 15:29 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/traceprg.prg
    * Changed to use variable number of paramaters (...).
    % Optimized to use FOR EACH.

2003-01-02 15:08 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbtrace.h
  * source/rtl/trace.c
  * source/vm/cmdarg.c
    - Removed param from hb_traceInit()
    + Added logic to auto create trace.log ONLY if application makes use of TraceLog().

2003-01-02 12:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbtrace.h
  * source/rtl/trace.c
    + Added hb_traceInit() and hb_traceExit()

  * source/vm/cmdarg.c
    + Added support for new hb_traceInit()